tests/type_errors/record_merge_pick.sy
mod A

def main : _ : = let { a } = { a: "ABC" } in a + 1

--+ expected exit status: 1
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Str
--+ ----
--+ t27
--+ 
--+ PREAMBLE
--+  13| def _add 
--+  14|   : forall a. let Num a. a -> a -> a 
--+  15|   := foreign -[[ function(a) return function(b) return a + b end end ]]-
--+  16| def _sub

